fix top button on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -181,6 +181,10 @@ h6 { padding-bottom:0; margin-bottom: 0; }
 p {
   margin-top: 0; }
 
+.text-right {
+  text-align: right;
+}
+
 
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -438,7 +442,12 @@ there.
 @media (min-width: 400px) {}
 
 /* Larger than phablet (also point when grid becomes active) */
-@media (min-width: 550px) {}
+@media (max-width: 550px) {
+  .text-right {
+    text-align: left;
+    padding-top: 20px;
+  }
+}
 
 /* Larger than tablet */
 @media (min-width: 750px) {}
